syntax = "proto3";

package proto;

message ChatMessage {
	string messageContent = 1;
	string clientName = 2;
}

message ServerResponse {
	string formattedMessage = 1;
}

service ChatService {
	rpc ExchangeMessage(ChatMessage) returns (ServerResponse);
}
